[package]
name = "bt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
criterion = "0.3"

[[bench]]
name = "criterion"
harness = false
